--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@upstash/ratelimit": "^0.4.3",
+    "@upstash/redis": "^1.22.0",
     "ai": "^2.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
@@ -33,12 +35,15 @@
     "clsx": "^2.0.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "langchain": "^0.0.131",
     "lucide-react": "^0.263.1",
     "mongodb": "^5.7.0",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "next-cloudinary": "^4.18.0",
     "next-themes": "^0.2.1",
+    "openai": "^4.0.1",
+    "openai-edge": "^1.2.2",
     "postcss": "8.4.27",
     "query-string": "^8.1.0",
     "react": "18.2.0",
@@ -48,6 +53,7 @@
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-spinners": "^0.13.8",
+    "replicate": "^0.12.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
