--- a/package.json
+++ b/package.json
@@ -54,11 +54,13 @@
     "react-loader-spinner": "^5.3.4",
     "react-spinners": "^0.13.8",
     "replicate": "^0.12.3",
+    "stripe": "^13.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
