--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-spinners": "^0.13.8",
+    "react-type-animation": "^3.1.0",
     "replicate": "^0.12.3",
     "stripe": "^13.2.0",
     "tailwind-merge": "^1.14.0",
